changed home link css to remove underline

--- a/resume.css
+++ b/resume.css
@@ -68,6 +68,15 @@ h1 {
 }
 .pointer { cursor: pointer;}
 
+a.home:link {
+  text-decoration: none;
+  color:black;}
+a.home:visited {
+  text-decoration: color: black;}
+a.home:hover {
+  text-decoration: underline;}
+a.home:active {
+  text-decoration: underline;}
 a.porfolio:link {
 	text-decoration: none;
 	color:black;}
