--- a/website.css
+++ b/website.css
@@ -117,3 +117,12 @@ a.mp:hover {
   text-decoration: underline;}
 a.mp:active {
   text-decoration: underline;}
+a.link:link {
+  text-decoration: none;
+  color: blue;}
+a.link:visited {
+  color: blue;}
+a.link:hover {
+  text-decoration: underline;}
+a.link:active {
+  text-decoration: underline;}
