--- a/mockups.css
+++ b/mockups.css
@@ -121,7 +121,7 @@ a.link:active {
   max-width: 700px;
 }
 
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
+/* Caption of Modal Image (Image Text) - Same Width as the Image 
 #caption {
   margin: auto;
   display: block;
@@ -131,10 +131,10 @@ a.link:active {
   color: #ccc;
   padding: 10px 0;
   height: 150px;
-}
+}*/
 
 /* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
+.modal-content /*, #caption*/ {
   animation-name: zoom;
   animation-duration: 0.6s;
 }
