--- a/resume.css
+++ b/resume.css
@@ -7,6 +7,7 @@
 .left {
 	float:left;
 }
+
 body {
   background-color: #f1f1f1;
   padding: 20px;
@@ -37,7 +38,7 @@ h1 {
 /*create four equal columns that floats next to each other*/
 .column {
   float: left;
-  width: 100%;
+  width: 25%;
 }
 
 /*clear floats after rows*/ 
@@ -49,14 +50,14 @@ h1 {
 
 /*CONTENT*/
 .content {
-  background-color: white;
+  background-color: #ffffff;
   padding: 10px;
 }
-
+/*RESPONSIVE LAYOUT*/
 /*makes a two column-layout instead of four columns */
 @media screen and (max-width: 900px) {
   .column {
-    width: 100%;
+    width: 50%;
   }
 }
 
@@ -66,6 +67,7 @@ h1 {
     width: 100%;
   }
 }
+/* Mouse type */
 .pointer { cursor: pointer;}
 
 /*HOME PAGE LINK*/
