--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 .right {
 	float:right;
 }	
@@ -41,38 +42,42 @@ h1 {
   width: 50%;
 }
 
-/*clear floats after rows*/ 
+/* clear floats after rows */ 
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/*CONTENT*/
+/*CONTENT DIV*/
 .content {
   background-color: #ffffff;
   padding: 10px;
 }
+
 /*RESPONSIVE LAYOUT*/
-/*makes a two column-layout instead of four columns */
+
+/*makes a two column-layout instead of four columns*/
 @media screen and (max-width: 900px) {
   .column {
     width: 50%;
   }
 }
-
-/*makes the two columns stack on top of each other instead of next to each other */
+/*makes the two columns stack on top of each other instead of next to each other*/
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
   }
 }
-/* Mouse type */
+
+/*MOUSE TYPE*/
 .pointer { cursor: pointer;}
 
+/*TITLE "CHYNA" TEXT FONT*/
+a.title {
+	 font-family: Georgia, serif;
+}
 /*HOME PAGE LINK*/
-a.home {
-	font-family: Georgia, serif;}
 a.home:link {
   text-decoration: none;
   color:black;}
@@ -81,6 +86,20 @@ a.home:visited {
 a.home:hover {
   text-decoration: underline;}
 a.home:active {
+  text-decoration: underline;}
+
+/*LABEL LINKS*/
+a.label {
+	font-family: "Times New Roman", Times, serif;
+}
+a.label:link {
+  text-decoration: none;
+  color:black;}
+a.label:visited {
+  color: black;}
+a.label:hover {
+  text-decoration: underline;}
+a.label:active {
   text-decoration: underline;}
 
 /*ADDITIONAL INFO LINK*/ 
@@ -93,8 +112,3 @@ a.link:hover {
   text-decoration: underline;}
 a.link:active {
   text-decoration: underline;}
-
-/*ABOUT ME TEXT FONT*/
-p.b {
-	 font-family: "Times New Roman", Times, serif;
-}
