--- a/resume.css
+++ b/resume.css
@@ -1,4 +1,4 @@
-* {
+/** {
   box-sizing: border-box;
 }
 .right {
@@ -14,7 +14,7 @@ body {
   font-family: Arial;
 }
 
-/*CENTERS WEBSITE*/
+/*CENTERS WEBSITE
 .main {
   max-width: 1000px;
   margin: auto;
@@ -29,48 +29,50 @@ h1 {
   margin: 8px -16px;
 }
 
-/*COLUMN PADDING*/
+/*COLUMN PADDING
 .row,
 .row > .column {
   padding: 8px;
 }
 
-/*create four equal columns that floats next to each other*/
+/*create four equal columns that floats next to each other
 .column {
   float: left;
   width: 25%;
 }
 
-/*clear floats after rows*/ 
+/*clear floats after rows
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/*CONTENT*/
+/*CONTENT
 .content {
   background-color: #ffffff;
   padding: 10px;
 }
-/*RESPONSIVE LAYOUT*/
-/*makes a two column-layout instead of four columns */
+/*RESPONSIVE LAYOUT
+/*makes a two column-layout instead of four columns 
 @media screen and (max-width: 900px) {
   .column {
     width: 50%;
   }
 }
 
-/*makes the two columns stack on top of each other instead of next to each other */
+/*makes the two columns stack on top of each other instead of next to each other 
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
   }
 }
-/* Mouse type */
+/* Mouse type 
 .pointer { cursor: pointer;}
 
-/*HOME PAGE LINK*/
+/*HOME PAGE LINK
+a.home {
+	font-family: Georgia, serif;}
 a.home:link {
   text-decoration: none;
   color:black;}
@@ -81,7 +83,7 @@ a.home:hover {
 a.home:active {
   text-decoration: underline;}
 
-/*RESUME LINK*/
+/*RESUME LINK
 a.resume:link {
 	text-decoration: none;
 	color:black;}
@@ -92,7 +94,7 @@ a.resume:hover {
 a.resume:active {
 	text-decoration: underline;}
 	
-/*ADDITIONAL INFO LINK*/ 
+/*ADDITIONAL INFO LINK
 a.link:link {
   text-decoration: none;
   color: blue;}
