--- a/flyers.css
+++ b/flyers.css
@@ -1,3 +1,5 @@
+/*"FLYERS CSS - #3 CSS*/
+
 * {
   box-sizing: border-box;
 }
@@ -59,6 +61,7 @@ h1 {
 }
 
 /*RESPONSIVE LAYOUT*/
+
 /*makes a two column-layout instead of four columns*/
 @media screen and (max-width: 900px) {
   .column {
@@ -73,9 +76,15 @@ h1 {
   }
 }
 
+/*HR STYLING FOR MOM*/
+hr {
+	border-top:1px solid pink;
+}
+
 /*HOME PAGE LINK*/
 a.home {
-	font-family: Georgia, serif;}
+	font-family: Georgia, serif;
+	font-size:6vw;}
 a.home:link {
   text-decoration: none;
   color:black;}
@@ -109,7 +118,24 @@ a.link:hover {
   text-decoration: underline;}
 a.link:active {
   text-decoration: underline;}
-  
+
+/*PROTOTYPE IMAGES*/
+img.pro{
+	width:100%;
+	height:100%;
+}
+
+/*OTHER FOLDER ICONS
+img.icon{
+	width:100%;
+}*/
+
+/*FLYER & MOCKUP IMAGES*/
+img.flyer{
+	width:100%;
+	height:100%;
+}
+
 /*click to enlargen content*/
 .content:hover {
 	opacity: 0.7;
