--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,4 @@
+/*PORTFOLIO CSS - #2 CSS*/
 * {
   box-sizing: border-box;
 }
@@ -77,7 +78,32 @@ h1 {
 a.title {
 	 font-family: Georgia, serif;
 }
+
+/*HR STYLING FOR MOM*/
+hr {
+	border-top:1px solid pink;
+}
+
+/*ABOUT ME TEXT FONT*/
+p.b {
+	 font-family: "Times New Roman", Times, serif;
+}
+/*ABOUT ME IMAGE*/
+img.profile{
+	width:100%;
+}
+
+
+/*EMBEDED YT VIDEOS*/
+embed.yt{
+	width:100%;
+	height:210px;
+}
+
 /*HOME PAGE LINK*/
+a.home {
+	font-family: Georgia, serif;
+	font-size:6vw;}
 a.home:link {
   text-decoration: none;
   color:black;}
