minor comment fixes

--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -75,7 +75,7 @@ h1 {
 /*MOUSE TYPE*/
 .pointer { cursor: pointer;}
 
-/*TITLE "CHYNA" TEXT FONT*/
+/*TITLE "CHYNA" TEXT FONT ON INDEX.HTML*/
 a.title {
 	 font-family: Georgia, serif;
 }
