--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -64,6 +64,15 @@ h1 {
   .column {
     width: 50%;  
 }
+.title {
+  width: 15ch;
+  animation: typing 2s steps(20), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
 }
 /*makes the two columns stack on top of each other instead of next to each other*/
 @media screen and (max-width: 600px) {
@@ -88,7 +97,7 @@ h1 {
   justify-content: center;
 }
 
-.title {
+/*.title {
   width: 49ch;
   animation: typing 2s steps(20), blink .5s step-end infinite alternate;
   white-space: nowrap;
@@ -96,7 +105,7 @@ h1 {
   border-right: 3px solid;
   font-family: monospace;
   font-size: 2em;
-}
+}*/
 
 @keyframes typing {
   from {
